--- a/017_Search_DataGridView_Using_ComboBox_And_TxtBox/017_Search_DataGridView_Using_ComboBox_And_TxtBox/App.config
+++ b/017_Search_DataGridView_Using_ComboBox_And_TxtBox/017_Search_DataGridView_Using_ComboBox_And_TxtBox/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="_017_Search_DataGridView_Using_ComboBox_And_TxtBox.Properties.Settings.kagayaConnectionString"
+            connectionString="Data Source=184.168.194.75;Initial Catalog=kagaya;User ID=kagaya;Password=09184645154"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
