--- a/012_Export_DataGridView_To_CSV__File/012_Export_DataGridView_To_CSV__File/Properties/Settings.settings
+++ b/012_Export_DataGridView_To_CSV__File/012_Export_DataGridView_To_CSV__File/Properties/Settings.settings
@@ -1,7 +1,14 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="_012_Export_DataGridView_To_CSV__File.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="kagayaConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=184.168.194.75;Initial Catalog=kagaya;User ID=kagaya;Password=09184645154&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=184.168.194.75;Initial Catalog=kagaya;User ID=kagaya;Password=09184645154</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
