--- a/WPF_002/WPF_002/WPF_002.csproj
+++ b/WPF_002/WPF_002/WPF_002.csproj
@@ -62,6 +62,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="HeaderToImageConverter.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -95,14 +96,8 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Image\drive.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Image\file.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Image\folder-closed.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Image\folder-open.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
