--- a/T_097_Making_Controls/T_097_Making_Controls/T_097_Making_Controls.csproj
+++ b/T_097_Making_Controls/T_097_Making_Controls/T_097_Making_Controls.csproj
@@ -51,8 +51,20 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Mybutton.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Mybutton.Designer.cs">
+      <DependentUpon>Mybutton.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Mybutton.resx">
+      <DependentUpon>Mybutton.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
