--- a/T_048_WPF_Templates/T_048_WPF_Templates/T_048_WPF_Templates.csproj
+++ b/T_048_WPF_Templates/T_048_WPF_Templates/T_048_WPF_Templates.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FFE25C2D-FFAF-432B-91A4-94409EC067DD}</ProjectGuid>
+    <ProjectGuid>{BEF4F01C-BD25-4B15-A25D-845895495A70}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>T_047_WPF_Resource_Scope</RootNamespace>
-    <AssemblyName>T_047_WPF_Resource_Scope</AssemblyName>
+    <RootNamespace>T_048_WPF_Templates</RootNamespace>
+    <AssemblyName>T_048_WPF_Templates</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -66,10 +66,6 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="ResourceDictionaries\DictionaryWithBrush.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
