--- a/T_063_WPF_Interaction/T_063_WPF_Interaction/T_063_WPF_Interaction.csproj
+++ b/T_063_WPF_Interaction/T_063_WPF_Interaction/T_063_WPF_Interaction.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BDF7F280-D906-4120-ADA4-E3C6694DEA7A}</ProjectGuid>
+    <ProjectGuid>{EFFB5B12-29C0-4559-BDC8-F65108469398}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>T_062_WPF_Localization</RootNamespace>
-    <AssemblyName>T_062_WPF_Localization</AssemblyName>
+    <RootNamespace>T_063_WPF_Interaction</RootNamespace>
+    <AssemblyName>T_063_WPF_Interaction</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -82,7 +82,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
+      <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
